--- a/views/recipient.ejs
+++ b/views/recipient.ejs
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    table,
+    th,
+    td {
+        border: 1px solid black;
+    }
+</style>
 
 <body>
     <h1>Recipient</h1>
@@ -34,7 +41,7 @@
                 </td>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="tableBody">
             <tr>
                 <td>
                     Recipient 1
@@ -54,8 +61,9 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         updateInstallmentIndex();
+        updateRecipientDetails();
     });
 
     function updateInstallmentIndex() {
@@ -64,13 +72,48 @@
             url: '/recipient/message',
             contentType: "application/json",
             success: function (data) {
-               if(data) {
+                if (data) {
                     $('.messageDetails').empty();
                     var message = '';
                     message += ` <h1 id="totalMessage">Total Message: ${data.totalMessageCount}</h1><hr>`;
                     message += ` <h1 id="messageSent">Message already sent: ${data.sendMessageCount}</h1><hr>`;
                     $('.messageDetails').append(message);
-               }
+                }
+            },
+            error: function (MLHttpRequest, textStatus, errorThrown) {
+                alert(errorThrown);
+            }
+        });
+    }
+
+    function updateRecipientDetails() {
+        $.ajax({
+            type: 'GET',
+            url: '/recipient/all',
+            contentType: "application/json",
+            success: function (data) {
+                if (data) {
+                    console.log(data);
+                    $('.tableBody').empty();
+                    var tableBody = '';
+                    data.forEach(element => {
+                        tableBody += `<tr>
+                                        <td>
+                                            ${element.recipientName}
+                                        </td>
+                                        <td>
+                                            ${element.actualPercentage} %
+                                        </td>
+                                        <td>
+                                            ${element.currentPercentage} %
+                                        </td>
+                                        <td>
+                                            ${element.receviedMessageCount}
+                                        </td>
+                                    </tr>`;
+                    });
+                    $('.tableBody').append(tableBody);
+                }
             },
             error: function (MLHttpRequest, textStatus, errorThrown) {
                 alert(errorThrown);
