--- a/views/recipient.ejs
+++ b/views/recipient.ejs
@@ -1,57 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<style>
-    table,
-    th,
-    td {
-        border: 1px solid black;
-    }
-</style>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-<body>
-    <h1>Recipient</h1>
-    <div class="messageDetails">
-        <h1 id="totalMessage">Total Message: 0</h1>
-        <hr>
-        <h1 id="messageSent">Message already sent: 0</h1>
-        <hr>
+    <title>Recipient</title>
+  </head>
+  <body>
+    <h1 class="text-center">Recipient</h1>
+    <div class="messageDetails container">
+        <div class="row">
+            <div class="col-6">
+                <h3 id="totalMessage" class="text-start">Total Message: 0</h3>
+            </div>
+            <div class="col-6">
+                <h3 id="messageSent" class="text-end">Message already sent: 0</h3>
+            </div>
+        </div>
     </div>
 
-    <table>
-        <thead>
-            <tr>
-                <td>
-                    Recipient Name
-                </td>
-                <td>
-                    Actual percentage
-                </td>
-                <td>
-                    Current percentage
-                </td>
-                <td>
-                    Message received count
-                </td>
-            </tr>
-        </thead>
-        <tbody class="tableBody">
-        </tbody>
-    </table>
-</body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <div class="container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <td>
+                        Recipient Name
+                    </td>
+                    <td>
+                        Actual percentage
+                    </td>
+                    <td>
+                        Current percentage
+                    </td>
+                    <td>
+                        Message received count
+                    </td>
+                </tr>
+            </thead>
+            <tbody class="tableBody">
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+    -->
+  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
-        // setInterval(() => {
+        setInterval(() => {
             updateInstallmentIndex();
             updateRecipientDetails();
-        // }, 3000);
+        }, 3000);
     });
 
     function updateInstallmentIndex() {
@@ -63,8 +75,14 @@
                 if (data) {
                     $('.messageDetails').empty();
                     var message = '';
-                    message += ` <h1 id="totalMessage">Total Message: ${data.totalMessageCount}</h1><hr>`;
-                    message += ` <h1 id="messageSent">Message already sent: ${data.sendMessageCount}</h1><hr>`;
+                    message += `<div class="row">
+                                    <div class="col-6">
+                                        <h3 id="totalMessage" class="text-start">Total Message: ${data.totalMessageCount}</h3>
+                                    </div>
+                                    <div class="col-6">
+                                        <h3 id="messageSent" class="text-end">Message already sent: ${data.sendMessageCount}</h3>
+                                    </div>
+                                </div>`;
                     $('.messageDetails').append(message);
                 }
             },
@@ -96,7 +114,7 @@
                                             ${element.currentPercentage} %
                                         </td>
                                         <td>
-                                            ${element.receviedMessageCount}
+                                            <h4> ${element.receviedMessageCount} </h4>
                                         </td>
                                     </tr>`;
                     });
@@ -109,5 +127,4 @@
         });
     }
 </script>
-
 </html>
