--- a/views/message.ejs
+++ b/views/message.ejs
@@ -10,23 +10,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Message Setting</title>
 </head>
 
 <body>
-    <h1>Message settings</h1>
-
-    <form action="#" method="POST" id="create">
-        <div class="mb-3">
-            <label for="totalMessageCount" class="form-label">Total Message Count</label>
-            <input type="number" class="form-control" id="totalMessageCount" required>
-        </div>
-        <div class="mb-3">
-            <label for="sendMessageCount" class="form-label">Send Message Count</label>
-            <input type="number" class="form-control" id="sendMessageCount" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <h1 class="text-center">Message settings</h1>
+    <div class="container">
+        <form action="/message/update" method="POST" id="create">
+            <div class="mb-3">
+                <label for="totalMessageCount" class="form-label">Total Message Count</label>
+                <input type="number" class="form-control" name="totalMessageCount" required>
+            </div>
+            <div class="mb-3">
+                <label for="sendMessageCount" class="form-label">Send Message Count</label>
+                <input type="number" class="form-control" name="sendMessageCount" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -41,24 +42,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     -->
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-    // $('#create').submit(function (e) {
-    //     $.ajax({
-    //         type: 'POST',
-    //         url: '/message/edit',
-    //         contentType: "application/json",
-    //         "data": {
-
-    //         }
-    //         success: function (data) {
-
-    //         },
-    //         error: function (MLHttpRequest, textStatus, errorThrown) {
-    //             alert(errorThrown);
-    //         }
-    //     });
-    // })
-</script>
-
 </html>
